# GameEngineRF-IN_progress

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  imgui.ini  motor_grafico
src/: main.cpp
src/core/: create_project.cpp  create_project.h  engine.cpp  engine.h
src/editor/ui/principal_page/: principal_page.cpp  principal_page.h
src/editor/ui/project_page/: create_project.cpp  create_project.h
src/gtk/: create_project.cpp  create_project.h
src/gtk/style/: style1.css
src/widget/: elements_list_widget..h  elements_list_widget.cpp  folders_list_widget.cpp  header_engine_widget.cpp  header_engine_widget.h  widget1.cpp  widget1.h
src/widget/elements_list_widget/: elements_list_widget.cpp
src/widget/folders_list_widget/: folders_list_widget.cpp  folders_list_widget.h
src/widget/header_engine_widget/: header_engine_widget.cpp
src/widget/info_render_widget/: info_render_widget.cpp  info_render_widget.h
src/widget/scene_view_widget/: scene_view.h  scene_view_widget.cpp
